--- a/style.css
+++ b/style.css
@@ -410,6 +410,8 @@ th, td {
     }
 
     .product-content {
+        display: flex;
+        flex-wrap: wrap;
         grid-template-columns: repeat(1, 1fr);
         gap: 30px;
     }
